remove padding to avoid overflowing button

--- a/jvm/controls/src/main/resources/css/scrolling-waveform.css
+++ b/jvm/controls/src/main/resources/css/scrolling-waveform.css
@@ -63,7 +63,6 @@
 }
 
 .scrolling-waveform-frame__image-container {
-    -fx-padding: 80 0;
     -fx-background-color: white;
 }
 
